:green_circle: 修改配置，调整代码

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.banner.charset=UTF-8
 spring.banner.location=classpath:banner.txt
 ###mybatis配置###
 #配置实体类的别名
-mybatis.type-aliases-package=icu.sol.aha
+mybatis.type-aliases-package=icu.soul.aha
 #指定映射文件的位置
 mybatis.mapper-locations=classpath:mapper/*.xml
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -18,19 +18,19 @@ spring.datasource.password=123456
 #最小空闲连接数，默认10
 #spring.datasource.hikari.minimum-idle=10
 ##hikari configurations
-spring.datasource.hikari.data-source-properties.cachePrepStmts=false
-#spring.datasource.hikari.data-source-properties.prepStmtCacheSize=250
-#spring.datasource.hikari.data-source-properties.prepStmtCacheSqlLimit=2048
+spring.datasource.hikari.data-source-properties.cachePrepStmts=true
+spring.datasource.hikari.data-source-properties.prepStmtCacheSize=250
+spring.datasource.hikari.data-source-properties.prepStmtCacheSqlLimit=2048
 spring.datasource.hikari.data-source-properties.useServerPrepStmts=true
 spring.datasource.hikari.data-source-properties.useLocalSessionState=true
 spring.datasource.hikari.data-source-properties.useLocalTransactionState=true
-#spring.datasource.hikari.data-source-properties.rewriteBatchedStatements=true
-#spring.datasource.hikari.data-source-properties.cacheResultSetMetadata=true
-#spring.datasource.hikari.data-source-properties.cacheServerConfiguration=true
-#spring.datasource.hikari.data-source-properties.elideSetAutoCommits=true
-#spring.datasource.hikari.data-source-properties.maintainTimeStats=false
+spring.datasource.hikari.data-source-properties.rewriteBatchedStatements=true
+spring.datasource.hikari.data-source-properties.cacheResultSetMetadata=true
+spring.datasource.hikari.data-source-properties.cacheServerConfiguration=true
+spring.datasource.hikari.data-source-properties.elideSetAutoCommits=true
+spring.datasource.hikari.data-source-properties.maintainTimeStats=false
 # logger
-logging.level.root=WARN
+logging.level.root=debug
 logging.level.com.zaxxer.hikari.HikariConfig=DEBUG
 logging.level.com.zaxxer.hikari=DEBUG
 logging.level.org.springframework.transaction=DEBUG
