--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,8 @@ spring.banner.location=classpath:banner.txt
 mybatis.type-aliases-package=icu.soul.aha
 #指定映射文件的位置
 mybatis.mapper-locations=classpath:mapper/*.xml
+#spring.datasource.driver-class-name=com.p6spy.engine.spy.P6SpyDriver
+
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://192.168.204.29:3306/boot_1003_zh?characterEncoding=utf8&useSSL=false&allowMultiQueries=true&useAffectedRows=true
 spring.datasource.username=root
@@ -19,9 +21,11 @@ spring.datasource.password=123456
 #spring.datasource.hikari.minimum-idle=10
 ##hikari configurations
 spring.datasource.hikari.data-source-properties.cachePrepStmts=true
-spring.datasource.hikari.data-source-properties.prepStmtCacheSize=250
-spring.datasource.hikari.data-source-properties.prepStmtCacheSqlLimit=2048
+
 spring.datasource.hikari.data-source-properties.useServerPrepStmts=true
+spring.datasource.hikari.data-source-properties.prepStmtCacheSize=250
+spring.datasource.hikari.data-source-properties.prepStmtCacheSqlLimit=200
+
 spring.datasource.hikari.data-source-properties.useLocalSessionState=true
 spring.datasource.hikari.data-source-properties.useLocalTransactionState=true
 spring.datasource.hikari.data-source-properties.rewriteBatchedStatements=true
